error.txt
sources/a.c:54:16: error: too few arguments to function call, expected 2, have 0
        f = key_press();
            ~~~~~~~~~ ^
sources/a.c:16:1: note: 'key_press' declared here
int     key_press(int keycode, void *param)
^
sources/a.c:55:11: error: comparison between pointer and integer ('int (*)(int, void *)' and 'int') [-Werror,-Wpointer-integer-compare]
    if (f == 1)
        ~ ^  ~
2 errors generated.
